# abode

./: .env  .gitignore  Cargo.toml  README.md  db.sh  diesel-app.toml  diesel-pending.toml  pending.db
backend/: Cargo.toml  db.sh  gen_enc_secret.sh
backend/prisma/: schema.prisma
backend/src/: lib.rs  main.rs
backend/src/db/: impls.rs  mod.rs  prisma.rs  util.rs
backend/src/routes/: mod.rs  notifications.rs  posts.rs  sections.rs  sign_in.rs  sign_up.rs  submissions.rs
backend/src/routes/utils/: headers.rs  jwt.rs  misc.rs  mod.rs  responses.rs
frontend/: Cargo.toml  Rocket.toml  rust-toolchain.toml
frontend/src/: main.rs  pages.rs  utils.rs
frontend/templates/: about.html.tera  base.html.tera  browse.html.tera  browse_menu.html.tera  login.html.tera
migrations/app/2022-11-10-190713_create_posts/: down.sql  up.sql
migrations/pending_posts/2022-12-13-214052_pending_posts/: down.sql  up.sql
prisma-cli/: Cargo.toml
src/: lib.rs  main.rs
src/db/: mod.rs  schema.rs  util.rs
src/db/models/: app.rs  mod.rs  pending.rs
src/db/pending/: util.rs
src/db/schemas/: app.rs  pending.rs
src/db/utils/: app.rs  mod.rs  pending.rs
src/routes/: mod.rs  posts.rs  sections.rs  sign_in.rs  sign_up.rs  submissions.rs  util.rs
src/routes/utils/: headers.rs  misc.rs  responses.rs
