[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.3.0"
color-eyre = "0.6.2"
lazy_static = "1.4.0"
paste = "1.0.12"
pulldown-cmark = "0.9.2"
ammonia = "3.3.0"
async_once = "0.2.6"
serde_json = "1.0.95"
serde-value = "0.7.0"
kamadak-exif = "0.5.5"
imagesize = "0.11.0"

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png", "jpeg"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.7"
default-features = false
features = ["mysql"]

[dependencies.chrono]
version = "0.4.24"
features = ["serde"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.validator]
version = "0.16.0"
features = ["derive"]

[dependencies.sanitizer]
version = "0.1.6"
features = ["derive"]

[dependencies.strum]
version = "0.24.1"
features = ["derive"]

[dependencies.uuid]
version = "1.3.0"
features = ["serde", "v4"]
