[package]
name = "abode-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["json"] }
strum = "0.24.1"

[dependencies.serde]
version = "1.0.164"
features = ["derive"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

